--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "jquery": "^2.2.4",
     "jsdom": "^9.3.0",
     "json-loader": "^0.5.4",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "lodash": "^4.13.1",
     "mocha": "^2.5.3",
     "mocha-loader": "^0.7.1",
@@ -65,5 +67,9 @@
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-node-externals": "^1.2.0"
+  },
+  "dependencies": {
+    "less-plugin-rewrite-import": "^0.1.1",
+    "semantic-ui-less": "^2.2.4"
   }
 }
