--- a/.eslintrc
+++ b/.eslintrc
@@ -6,16 +6,17 @@
   "rules": {
     "react/jsx-closing-bracket-location": [1, "after-props"],
     "new-cap": ["error", {"capIsNew": false}],
-    "no-unused-expressions": 0
+    "no-unused-expressions": 0,
+    "prefer-arrow-callback": 0,
   },
   "settings": {
     "import/resolver": {
-      "webpack": { "config": "./webpack.config.js" }
-    }
+      "webpack": { config: 'webpack.config.js' },
+    },
   },
   "parserOptions": {
     "ecmaFeatures": {
-      "experimentalObjectRestSpread": true
+      "experimentalObjectRestSpread": true,
     }
-  }
+  },
 }
