--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "NODE_ENV=production node ./node_modules/webpack/bin/webpack --config webpack.config.js",
     "dev": "NODE_ENV=development node ./node_modules/webpack-dev-server/bin/webpack-dev-server --host 0.0.0.0 --progress --colors --hot --inline --content-base=build  --history-api-fallback",
-    "test": "./node_modules/.bin/mocha-webpack --opts ./test/mocha-webpack.opts --watch",
-    "test:browser": "NODE_ENV=development node ./node_modules/webpack-dev-server/bin/webpack-dev-server --host 0.0.0.0 --devtool eval --config test/webpack.config.test.browser.js --progress --colors --hot --inline --content-base test  --history-api-fallback"
+    "test": "./node_modules/.bin/mocha-webpack --opts ./test/mocha-webpack.opts --watch"
   },
   "repository": {
     "type": "git",
@@ -19,59 +18,58 @@
     "url": "https://github.com/neekey/react-webpack-spa/issues"
   },
   "homepage": "https://github.com/neekey/react-webpack-spa#readme",
-  "devDependencies": {
-    "anyproxy": "^3.10.2",
-    "babel-core": "^6.8.0",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-es2016": "^6.16.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "chai": "^3.5.0",
-    "css-loader": "^0.23.1",
-    "deepcopy": "^0.6.3",
-    "ejs": "^2.5.5",
-    "ejs-loader": "^0.3.0",
-    "enzyme": "^2.3.0",
-    "eslint": "^2.10.2",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-import-resolver-webpack": "^0.2.4",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.2.2",
-    "eslint-plugin-react": "^5.1.1",
-    "file-loader": "^0.8.5",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.24.1",
-    "image-webpack-loader": "^1.8.0",
-    "jquery": "^2.2.4",
-    "jsdom": "^9.3.0",
-    "json-loader": "^0.5.4",
-    "lodash": "^4.13.1",
-    "mocha": "^2.5.3",
-    "mocha-loader": "^0.7.1",
-    "mocha-webpack": "^0.4.0",
-    "mustache": "^2.2.1",
-    "node-sass": "^3.7.0",
-    "react": "^15.1.0",
-    "react-addons-test-utils": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-redux": "^4.4.5",
-    "react-router": "^3.0.0",
-    "react-router-redux": "^4.0.5",
-    "redux": "^3.5.2",
-    "sass-loader": "^3.2.0",
-    "sinon": "^1.17.4",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-node-externals": "^1.2.0"
-  },
   "dependencies": {
+    "classnames": "^2.2.5",
+    "deep-equal": "^1.0.1",
     "history": "^3.0.0",
-    "redux-responsive": "^4.1.1",
-    "redux-logger": "^2.7.4"
+    "prop-types": "^15.5.10",
+    "react": "^15.3.0",
+    "react-addons-create-fragment": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.1",
+    "react-addons-shallow-compare": "^15.4.1",
+    "react-addons-update": "^15.3.1",
+    "react-dom": "^15.0.2",
+    "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^7.1.1",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^7.1.0",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.5.0",
+    "chai": "^3.5.0",
+    "css-loader": "^0.26.1",
+    "ejs-loader": "^0.3.0",
+    "enzyme": "^2.8.2",
+    "eslint": "^2.9.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-react": "^5.1.1",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.24.1",
+    "inline-manifest-webpack-plugin": "^3.0.1",
+    "jsdom": "9.9.1",
+    "json-loader": "^0.5.4",
+    "less": "^2.7.1",
+    "less-loader": "^4.0.4",
+    "mocha": "^3.2.0",
+    "mocha-webpack": "^1.0.0-beta.1",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "^1.2.2",
+    "react-addons-test-utils": "^15.4.2",
+    "react-test-renderer": "^15.6.1",
+    "sass-loader": "^6.0.6",
+    "sinon": "^1.17.4",
+    "source-map-support": "^0.4.2",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.5.0",
+    "webpack-node-externals": "^1.3.0"
   }
 }
