--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
     "css-loader": "^0.26.1",
+    "cypress": "^3.0.3",
     "ejs-loader": "^0.3.0",
     "enzyme": "^2.8.2",
     "eslint": "^2.9.0",
