--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,4 @@ install:
   - npm install
 script:
   - $(npm bin)/cypress run --record
+  - $(npm bin)/start-server-and-test dev http-get://localhost:8081 cy-test
